fix full bleed border

--- a/src/styles/components/_full-bleed-image.scss
+++ b/src/styles/components/_full-bleed-image.scss
@@ -1,6 +1,8 @@
 .full-bleed-image {
     width: 100%;
     max-height: 800px;
+    overflow: hidden;
+    
     @include atSmallMedium {
         max-height: 600px;
     }
